--- a/OpsManage/templates/cmdb/ServerManage/asset.html
+++ b/OpsManage/templates/cmdb/ServerManage/asset.html
@@ -79,8 +79,7 @@
 
                     <!-- search form  -->
                     <div class="form-inline  pull-right">
-                        <form class="form-group" method='get' action="/search/" target="_blank" id="searchForm">
-                            <input style="display:none">
+                        <form class="form-group" method='get' action="/search/"  id="searchForm">
                             <input class="form-control" type="search" name="q" placeholder="Search..."
                                    style="width: 130px">
                             <span class="input-group-btn inline">
