--- a/OpsManage/templates/cmdb/basicData/editIdc.html
+++ b/OpsManage/templates/cmdb/basicData/editIdc.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>{{ IDC.idc_name }}</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 
@@ -52,10 +52,10 @@
 </head>
 <body>
 
-<section id="getintouch" class="rotateInUpLeft animated">
+<section id="getintouch" >
         <div class="container2" style="border-bottom: 0;">
             <h1>
-                <span>填写机房信息</span>
+                <span>编辑机房信息</span>
             </h1>
         </div>
         <div class="container" >
