--- a/OpsManage/templates/cmdb/ServerManage/asset_11.html
+++ b/OpsManage/templates/cmdb/ServerManage/asset_11.html
@@ -3,7 +3,6 @@
 
 {% block css_block %}
 <link rel="stylesheet" href="/static/dist/paginationjs/pagination.css">
-<link rel="stylesheet" href="/static/dist/search_dropDown/search_dropDown.css">
 
 {% endblock%}
 
@@ -14,8 +13,6 @@
     <!-- .content  -->
     <div class="box-body" id="box2">
         <div class="container-fluid">
-
-
 
             <!-- -------------------查询区-----------------------  -->
 
@@ -276,7 +273,6 @@
 
 <script type="text/javascript" src="/static/dist/layer/layer.js"></script>
 <script type="text/javascript" src="/static/dist/paginationjs/pagination.min.js"></script>
-<script type="text/javascript" src="/static/dist/search_dropDown/search_dropDown.js"></script>
 <!--设备详细页面弹窗-->
 <script type="text/javascript">
     function detail(n) {
@@ -307,13 +303,13 @@
 
     $(function () {
         $("#selectedOrg").change(function () {
-                var args1 = $("#filterForm").serialize();
-                var args2 = $("#pagelenForm").serialize();
-                var args = args1 + "&" + "page=1" + "&" + args2;
-                window.location = "{% url 'cmdb:asset' %}?" + args;
-            });
-            $("#selectedOrg").find('option[value="{{myNet}}"]').prop('selected', 'selected')
-     });
+            var args1 = $("#filterForm").serialize();
+            var args2 = $("#pagelenForm").serialize();
+            var args = args1 + "&" + "page=1" + "&" + args2;
+            window.location = "{% url 'cmdb:asset' %}?" + args;
+        });
+        $("#selectedOrg").find('option[value="{{myOrg}}"]').prop('selected', 'selected')
+    });
 
     $(function () {
         $("#selectedNet").change(function () {
@@ -329,6 +325,7 @@
 
 
 <!-- -----search数据查询----- -->
+
 <script>
     /*
     $(function () {
@@ -341,6 +338,7 @@
         });
     });
     */
+
 </script>
 
 
@@ -387,4 +385,6 @@
         });
     });
 </script>
+
+
 {% endblock foot_js %}
