--- a/OpsManage/templates/cmdb/basicData/contractManage.html
+++ b/OpsManage/templates/cmdb/basicData/contractManage.html
@@ -169,7 +169,7 @@
 <!-- ----tab效果---- -->
 <script>
     $(document).ready(function () {
-        $("#supplier").attr("id", "current"); // Activate first tab
+        $("#contract").attr("id", "current"); // Activate first tab
     });
 </script>
 {% endblock foot_js %}
