--- a/OpsManage/templates/base.html
+++ b/OpsManage/templates/base.html
@@ -28,11 +28,15 @@
     <link rel="stylesheet" href="/static/dist/bootstrap-daterangepicker/daterangepicker.css">
     <!-- bootstrap wysihtml5 - text editor -->
     <link rel="stylesheet" href="/static/dist/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
+    <link rel="stylesheet" href="/static/css/xcConfirm.css">
+
     <!-- Google Font -->
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
     <script type="text/javascript" src="/static/js/jquery-1.7.2.min.js" ></script>
     <script type="text/javascript" src="/static/dist/layer/layer.js"></script>
+    <script type="text/javascript" src="/static/js/xcConfirm.js"></script>
+
     {% block css_block %} {% endblock %}
 
 </head>
