--- a/OpsManage/templates/cmdb/basicData/editOrg.html
+++ b/OpsManage/templates/cmdb/basicData/editOrg.html
@@ -11,6 +11,19 @@
     <style>
         body{padding:20px 40px;margin:0;background:url(/static/img/bg.png);}
     </style>
+    <script type="text/javascript" src="/static/js/jquery-1.7.2.min.js" ></script>
+    <script>
+        $(function () {
+            var x = {{ ORGANIZATION.id }};
+            if (x){
+                $("#editOrgBox").css('display', '');
+            }
+        })
+    </script>
+
+    <link rel="stylesheet" href="/static/css/xcConfirm.css">
+
+    <script type="text/javascript" src="/static/js/xcConfirm.js"></script>
 </head>
 <body>
                 <div class="row" style="margin-top: 10px">
@@ -26,7 +39,7 @@
                             </div>
 
                             <!-- 供应商清单 -->
-                            <form method="post" action="editOrg">
+                            <form method="post" action="editOrg" id="deleteForm">
                                 <div class="box-body table-responsive ">
                                     <table class="table table-hover">
                                         <tr>
@@ -42,7 +55,7 @@
                                         {% for i in org %}
                                             <tr>
                                                 <td class="text-center"><input type="checkbox" name="delete_org" value="{{ i.pk }}"></td>
-                                                <td class="text-center">{{ i.pk }}</td>
+                                                <td class="text-center">{{ forloop.counter }}</td>
                                                 <td class="text-center">{{ i.org_name }}</td>
                                                 <td class="text-center">{{ i.org_address }}</td>
                                                 <td class="text-center">{{ i.parent_org }}</td>
@@ -60,7 +73,7 @@
 
 
                                 <div class="box-footer " >
-                                    <button type="submit" class="btn btn-danger pull-right">Delete</button>
+                                    <button type="button" onclick="var txt=  '确定删除所选单位？';window.wxc.xcConfirm(txt, window.wxc.xcConfirm.typeEnum.warning);" class="btn btn-danger pull-right">Delete</button>
                                 </div>
                             </form>
 
@@ -117,7 +130,7 @@
                             <!-- /.form start -->
                         </div>
 
-                        <div class="box box-success">
+                        <div class="box box-success" id="editOrgBox" style="display: none">
                             <!-- box-header -->
                             <div class="box-header with-border">
                                 <i class="glyphicon glyphicon-edit"></i>
