--- a/OpsManage/templates/cmdb/basicData/supplierManage.html
+++ b/OpsManage/templates/cmdb/basicData/supplierManage.html
@@ -31,7 +31,7 @@
                             </div>
 
                             <!-- 供应商清单 -->
-                            <form method="post" action="supplierManage">
+                            <form method="post" action="supplierManage" id="deleteForm">
                                 <div class="box-body table-responsive ">
                                     <table class="table table-hover">
                                         <tr>
@@ -47,7 +47,7 @@
                                         {% for i in supplier %}
                                             <tr>
                                                 <td class="text-center"><input type="checkbox" name="delete_supplier" value="{{ i.pk }}"></td>
-                                                <td class="text-center">{{ i.pk }}</td>
+                                                <td class="text-center">{{ forloop.counter }}</td>
                                                 <td class="text-center">{{ i.supplier_name }}</td>
                                                 <td class="text-center">{{ i.supplier_contacts }}</td>
                                                 <td class="text-center">{{ i.supplier_phone }}</td>
@@ -65,7 +65,7 @@
 
 
                                 <div class="box-footer " >
-                                    <button type="submit" class="btn btn-danger pull-right">Delete</button>
+                                    <button type="button" onclick="var txt=  '确定删除所选供应商？';window.wxc.xcConfirm(txt, window.wxc.xcConfirm.typeEnum.warning);" class="btn btn-danger pull-right">Delete</button>
                                 </div>
                             </form>
 
@@ -118,7 +118,7 @@
                         </div>
 
 
-                        <div class="box box-success">
+                        <div class="box box-success" id="editSupplierBox" style="display: none">
                             <!-- box-header -->
                             <div class="box-header with-border">
                                 <i class="glyphicon glyphicon-edit"></i>
@@ -176,4 +176,13 @@
         $("#supplier").attr("id", "current"); // Activate first tab
     });
 </script>
+    <script>
+        $(function () {
+            var x = {{ SUPPLIER.id }};
+            if (x){
+                $("#editSupplierBox").css('display', '');
+            }
+        })
+
+    </script>
 {% endblock foot_js %}
