--- a/OpsManage/templates/cmdb/basicData/orgManage.html
+++ b/OpsManage/templates/cmdb/basicData/orgManage.html
@@ -37,6 +37,9 @@
                         <a href="http://127.0.0.1:8000/cmdb/editOrg" target="_blank" style="margin-left: 1em;">
                             <span class="fa fa-gear text-primary pull-right" style="font-size: 18px"></span>
                         </a>
+                        <a href="/cmdb/importorg/" style="margin-left: 1em;display: none">
+                            <span class="fa fa-repeat text-primary pull-right" style="font-size: 18px"></span>
+                        </a>
                 </div>
 
                 <div class="box-body">
